section 2/blog/infra/k8s/client-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: client 
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client 
          image: nikolinmajmari/blogclient
---

apiVersion: v1 
kind: Service 
metadata:
  name: client-serv
spec:
  selector:
    app: client
  type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 80
      targetPort: 80
