section 2/blog/infra/k8s/mderation-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: moderation 
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation 
          image: nikolinmajmari/blogmoderation

---

apiVersion: v1 
kind: Service 
metadata:
  name: moderation-serv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports: 
    - name: posts
      protocol: TCP
      port: 4003
      targetPort: 4003
