section 2/blog/infra/k8s/posts-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: posts 
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts 
          image: nikolinmajmari/blogpost

---

apiVersion: v1 
kind: Service 
metadata:
  name: post-clusterip-serv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports: 
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
