section 2/blog/infra/k8s/query-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: query 
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query 
          image: nikolinmajmari/blogquery

---

apiVersion: v1 
kind: Service 
metadata:
  name: query-serv
spec:
  selector:
    app: query
  type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
