section 2/blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nigix.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http: 
        paths:
          - path: /posts/create
            pathType: Exact 
            backend: 
              service: 
                name: post-clusterip-serv
                port:  
                  number: 4000
          - path: /posts
            pathType: Exact 
            backend: 
              service: 
                name: query-serv
                port:  
                  number: 4002
          - path: /posts/
            pathType: Prefix
            backend:
              service: 
                name: comments-clusterip-serv
                port: 
                  number: 4001 
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: client-serv 
                port: 
                  number: 80
